--- a/nodejs/saudacao-mvc/views/formulario.html
+++ b/nodejs/saudacao-mvc/views/formulario.html
@@ -14,6 +14,9 @@
     <label for="idade">Idade:</label>
     <input type="number" id="idade" name="idade" required><br><br>
 
+    <label for="genero">Gênero:</label>
+    <input type="text" id="genero" name="genero" required><br><br>
+
     <button type="submit">Enviar</button>
   </form>
 </body>
